--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,5 +1,66 @@
+aiohappyeyeballs==2.6.1
+aiohttp==3.11.14
+aiosignal==1.3.2
+altair==5.5.0
+annotated-types==0.7.0
+anyio==3.7.1
+attrs==25.3.0
+blinker==1.9.0
+cachetools==5.5.2
+certifi==2025.1.31
+charset-normalizer==3.4.1
+click==8.1.8
+distro==1.9.0
 fastapi==0.104.1
-uvicorn==0.23.2
+frozenlist==1.5.0
+gitdb==4.0.12
+GitPython==3.1.44
+h11==0.14.0
+httpcore==1.0.7
+httpx==0.28.1
+idna==3.10
+importlib-metadata==6.11.0
+Jinja2==3.1.6
+jsonschema==4.23.0
+jsonschema-specifications==2024.10.1
+markdown-it-py==3.0.0
+MarkupSafe==3.0.2
+mdurl==0.1.2
+multidict==6.1.0
+narwhals==1.30.0
+numpy==1.26.4
+openai==0.28.0
+packaging==23.2
+pandas==2.2.3
+pillow==10.4.0
+propcache==0.3.0
+protobuf==4.25.6
+pyarrow==19.0.1
 pydantic==2.4.2
-openai==1.12.0
-python-dotenv==1.0.0 
+pydantic_core==2.10.1
+pydeck==0.9.1
+Pygments==2.19.1
+python-dateutil==2.9.0.post0
+python-dotenv==1.0.0
+pytz==2025.1
+referencing==0.36.2
+requests==2.31.0
+rich==13.9.4
+rpds-py==0.23.1
+six==1.17.0
+smmap==5.0.2
+sniffio==1.3.1
+starlette==0.27.0
+streamlit==1.28.0
+tenacity==8.5.0
+toml==0.10.2
+tornado==6.4.2
+tqdm==4.67.1
+typing_extensions==4.12.2
+tzdata==2025.1
+tzlocal==5.3.1
+urllib3==2.3.0
+uvicorn==0.23.2
+validators==0.34.0
+yarl==1.18.3
+zipp==3.21.0
