--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -23,6 +23,7 @@ importlib-metadata==6.11.0
 Jinja2==3.1.6
 jsonschema==4.23.0
 jsonschema-specifications==2024.10.1
+lxml==5.4.0
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 mdurl==0.1.2
@@ -40,8 +41,12 @@ pydantic==2.4.2
 pydantic_core==2.10.1
 pydeck==0.9.1
 Pygments==2.19.1
+PyPDF2==3.0.1
+pytesseract==0.3.13
 python-dateutil==2.9.0.post0
+python-docx==1.1.2
 python-dotenv==1.0.0
+python-multipart==0.0.20
 pytz==2025.1
 referencing==0.36.2
 requests==2.31.0
